# plugin-ai

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: chat.rs  lib.rs  ui.html
